Fixed ad covering game titles

--- a/styles/index.css
+++ b/styles/index.css
@@ -190,7 +190,7 @@ body{
 
 
 .ad_grid{
-    z-index: 99999;
+    z-index: -1;
     right: 0;
     left: 0;
     display: grid;
